--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	name = cooldaemon
 	email = cooldaemon@gmail.com
+[color]
+	diff = auto
+	status = auto
+	branch = auto
+	interactive = auto
