Added plugin for vimperator.

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -11,3 +11,14 @@ map h gT
 map j 3<C-e>
 map k 3<C-y>
 
+" copy.js
+javascript <<EOM
+liberator.globalVariables.copy_templates = [
+  { label: 'titleAndURL',    value: '%TITLE%\n%URL%' },
+  { label: 'title',          value: '%TITLE%' },
+  { label: 'anchor',         value: '<a href="%URL%">%TITLE%</a>' },
+  { label: 'hatena',         value: '[%URL%:title=%TITLE%]' },
+  { label: 'selanchor',      value: '<a href="%URL%" title="%TITLE%">%SEL%</a>' },
+  { label: 'htmlblockquote', value: '<blockquote cite="%URL%" title="%TITLE%">%HTMLSEL%</blockquote>' }
+];
+EOM
