--- a/.zsh/.zshrc.env
+++ b/.zsh/.zshrc.env
@@ -1,7 +1,13 @@
 export SVN_EDITOR=vi
-
 export PATH=~/bin:/usr/local/bin:$PATH
+
 if [ `uname` = 'Darwin' ]; then
-  export PATH=/opt/local/bin:/opt/local/sbin:$PATH
+  export PATH=/opt/local/bin:/usr/local/flex_sdk3/bin:$PATH
+  export MANPATH=$MANPATH:/opt/local/man
+  export LANG=ja_JP.UTF-8
+
+  if [ `which erl` = '/opt/local/bin/erl' ]; then
+    export MANPATH=$MANPATH:/opt/local/man:/opt/local/lib/erlang/man
+  fi
 fi
 
