--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -25,3 +25,14 @@ liberator.globalVariables.copy_templates = [
   { label: 'htmlblockquote', value: '<blockquote cite="%URL%" title="%TITLE%">%HTMLSEL%</blockquote>' }
 ];
 EOM
+
+" commandBookmarklet.js
+javascript <<EOM
+liberator.globalVariables.command_bookmarklet_prefix = '';
+EOM
+
+" feedSomeKeys_2.js
+:autocmd LocationChange .* :fmapc
+:autocmd LocationChange 'reader\.livedoor\.com/reader' :fmap j k s a p o v c <Space> <S-Space> z b < >
+:autocmd LocationChange 'mail\.google\.com/mail' :fmap -depth 4 c / j k n p o u e x s r a # [ ] z ? gi gs gt gd ga gc
+
