Fixed config files for the tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,11 +2,18 @@ set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
+set-option -g status-fg white
 set-option -g status-bg blue
-set-option -g status-fg yellow
+set-window-option -g window-status-current-fg   black
+set-window-option -g window-status-current-bg   magenta
+set-window-option -g window-status-current-attr bold
+
 set-option -g history-limit 100000
 set-option -g prefix C-a
 
 unbind-key C-b
 bind-key C-a send-prefix
+
+unbind-key c
+bind-key c new-window \; split-window -h \; up-pane
 
