Fixed key-binds for tmux. Added config files for vim.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,9 +11,71 @@ set-window-option -g window-status-current-attr bold
 set-option -g history-limit 100000
 set-option -g prefix C-a
 
+# Cleanup.
+# The following are excluded.
+# '0-9', ':', '?', '[', ']', '{', '}', 'c' or 'd'
 unbind-key C-b
+unbind-key C-o
+unbind-key C-z
+unbind-key Space
+unbind-key !
+unbind-key '"'
+unbind-key '#'
+unbind-key %
+unbind-key &
+unbind-key "'"
+unbind-key ,
+unbind-key -
+unbind-key .
+unbind-key =
+unbind-key D
+unbind-key f
+unbind-key i
+unbind-key l
+unbind-key n
+unbind-key o
+unbind-key p
+unbind-key q
+unbind-key r
+unbind-key s
+unbind-key t
+unbind-key w
+unbind-key x
+unbind-key '~'
+unbind-key PPage
+unbind-key UP
+unbind-key Down
+unbind-key Left
+unbind-key Right
+unbind-key M-1
+unbind-key M-2
+unbind-key M-3
+unbind-key M-4
+unbind-key M-5
+unbind-key M-n
+unbind-key M-o
+unbind-key M-p
+unbind-key M-Up
+unbind-key M-Down
+unbind-key M-Left
+unbind-key M-Right
+unbind-key C-Up
+unbind-key C-Down
+unbind-key C-Left
+unbind-key C-Right
+
 bind-key C-a send-prefix
 
-unbind-key c
-bind-key c new-window \; split-window -h \; up-pane
+bind s split-window -v
+bind v split-window -h
+
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind H resize-pane -L
+bind J resize-pane -D
+bind K resize-pane -U
+bind L resize-pane -R
 
