Fixed config file for tmux.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
+set-option -g base-index 1
 set-option -g status-fg white
 set-option -g status-bg blue
 set-window-option -g window-status-current-fg   black
@@ -79,3 +80,7 @@ bind J resize-pane -D
 bind K resize-pane -U
 bind L resize-pane -R
 
+# Startup.
+new-session
+split-window -h
+select-pane -t 0
