Added a config file for termtter.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,11 +14,10 @@ set-option -g prefix C-a
 
 # Cleanup.
 # The following are excluded.
-# '0-9', ':', '?', '[', ']', '{', '}', 'c' or 'd'
+# 'Space', '0-9', ':', '?', '[', ']', '{', '}', 'c' or 'd'
 unbind-key C-b
 unbind-key C-o
 unbind-key C-z
-unbind-key Space
 unbind-key !
 unbind-key '"'
 unbind-key '#'
@@ -67,20 +66,20 @@ unbind-key C-Right
 
 bind-key C-a send-prefix
 
-bind s split-window -v
-bind v split-window -h
+bind-key s split-window -v
+bind-key v split-window -h
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
-bind H resize-pane -L
-bind J resize-pane -D
-bind K resize-pane -U
-bind L resize-pane -R
+bind-key -n H resize-pane -L
+bind-key -n J resize-pane -D
+bind-key -n K resize-pane -U
+bind-key -n L resize-pane -R
 
 # Startup.
 new-session
-split-window -h
+split-window -h -l 30 'exec termtter'
 select-pane -t 0
