--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,12 +74,14 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind-key -n H resize-pane -L
-bind-key -n J resize-pane -D
-bind-key -n K resize-pane -U
-bind-key -n L resize-pane -R
+bind-key -r H resize-pane -L
+bind-key -r J resize-pane -D
+bind-key -r K resize-pane -U
+bind-key -r L resize-pane -R
 
 # Startup.
 new-session
 split-window -h -l 30 'exec termtter'
 select-pane -t 0
+
+set -g status-right ""
