Replace feedSomeKeys_2.js with feedSomeKeys_3.js

--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,6 +1,5 @@
 set visualbell
-"set guioptions=bmT
-set guioptions=b
+set gui=none,tabs
 set verbose=9
 
 map <Right> gt
@@ -31,8 +30,9 @@ javascript <<EOM
 liberator.globalVariables.command_bookmarklet_prefix = '';
 EOM
 
-" feedSomeKeys_2.js
-:autocmd LocationChange .* :fmapc
-:autocmd LocationChange 'reader\.livedoor\.com/reader' :fmap j k s a p o v c <Space> <S-Space> z b < >
-:autocmd LocationChange 'mail\.google\.com/mail' :fmap -depth 4 c / j k n p o u e x s r a # [ ] z ? gi gs gt gd ga gc
+" feedSomeKeys_3.js
+command! -nargs=+ lazy autocmd VimperatorEnter .* <args>
+lazy fmaps -u='mail\.google\.com/mail' c / j k n p o u e x s r a # [ ] ? gi gs gt gd ga gc
+lazy fmaps -u='mail\.google\.com/mail/.*/[0-9a-f]+$' c / j,n k,p n,j p,k o u e x s r a # [ ] ? gi gs gt gd ga gc
+lazy fmaps -u='(fastladder|livedoor)\.com/reader' j k s a p o v c i,p <Space> <S-Space> z b < > q w e,g
 
