--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
+set-option -g default-terminal screen-256color
+
 set-option -g base-index 1
 set-option -g status-fg white
 set-option -g status-bg blue
