--- a/.termtter/config
+++ b/.termtter/config
@@ -4,7 +4,8 @@
 config.token_file = "~/.termtter/token"
 
 config.confirm = true
-config.plugins.stdout.colors = [:red, :green, :yellow, :magenta, :cyan]
+#config.plugins.stdout.colors = [:red, :green, :yellow, :magenta, :cyan]
+config.plugins.stdout.colors = (31..33).to_a + (35..36).to_a + (91..96).to_a
 config.plugins.stdout.timeline_format =
   "<%= indent_text %>[<%=status_id%>]<<%=color%>><%=s.user.screen_name%>: <%=text%></<%=color%>> <%=time%>"
 
