Added new envs.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,4 @@
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
@@ -13,6 +13,8 @@ set-window-option -g window-status-current-attr bold
 
 set-option -g history-limit 100000
 set-option -g prefix C-a
+
+set -s escape-time 0
 
 # Cleanup.
 # The following are excluded.
@@ -82,8 +84,10 @@ bind-key -r K resize-pane -U
 bind-key -r L resize-pane -R
 
 # Startup.
-new-session
-split-window -h -l 30 'exec termtter'
-select-pane -t 0
+#new-session
+#split-window -h -l 30 'exec termtter'
+#select-pane -t 0
 
 set -g status-right ""
+
+source /Users/masahito.ikuta/.anyenv/envs/pyenv/versions/3.6.5/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
