--- a/.config/nvim/dein/dein.toml
+++ b/.config/nvim/dein/dein.toml
@@ -6,3 +6,11 @@ repo = 'Shougo/denite.nvim'
 
 [[plugins]]
 repo = 'Shougo/deoplete.nvim'
+
+[[plugins]]
+repo = 'davidhalter/jedi-vim'
+on_ft = 'python'
+
+[[plugins]]
+repo = 'zchee/deoplete-jedi'
+on_ft = 'python'
