--- a/ansible/roles/neovim/vars/main.yml
+++ b/ansible/roles/neovim/vars/main.yml
@@ -1,5 +1,6 @@
 neovim_dirs:
   - '~/.cache/nvim/backup'
   - '~/.cache/nvim/undo'
+  - '~/.cache/nvim/netrw'
 dein_dir: "~/.cache/dein/repos/github.com/Shougo/dein.vim"
 repo: "https://github.com/Shougo/dein.vim"
