Added several settings for the Intellij.

--- a/ansible/roles/dotfiles/vars/main.yml
+++ b/ansible/roles/dotfiles/vars/main.yml
@@ -2,4 +2,6 @@ src_path: ~/git/dotfiles
 config_files:
   - '.config'
   - '.gitconfig'
+  - '.gitignore_global'
   - '.tmux.conf'
+  - '.ideavimrc'
